# Event-Manager

./: CMakeLists.txt  CSV_HTML_Writer.h  Comparator.cpp  Comparator.h  ComparatorAscendingTitle.cpp  ComparatorAscendingTitle.h  ComparatorDescendingNoPeople.cpp  ComparatorDescendingNoPeople.h  Controller.cpp  Controller.h  Controller_User.cpp  Controller_User.h  Event.cpp  Event.h  README.md  Repo.cpp  Repo.h  Start.cpp  Tests.cpp  UI.cpp  UI.h  Validations.cpp  Validations.h
